--- a/Desktop.ImportTool/Desktop.ImportTool.csproj
+++ b/Desktop.ImportTool/Desktop.ImportTool.csproj
@@ -79,6 +79,9 @@
     </Reference>
     <Reference Include="System.Management" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Interactivity">
+      <HintPath>..\_Toolkits\Expression.Blend.Sdk.1.0.2\lib\net45\System.Windows.Interactivity.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
